cmake_minimum_required(VERSION 3.26)

project(CppThirdPartyTest)

add_subdirectory(StdFormat)
add_subdirectory(StdThread)
add_subdirectory(StdVariantVisit)
add_subdirectory(TestCmdLine)
add_subdirectory(TestJsonParser)
add_subdirectory(TestXmlParser)
add_subdirectory(TestEigen)
add_subdirectory(WxTemplate)
add_subdirectory(TestWindowsApi)
add_subdirectory(NativeWindowsTemplate)